--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@webpack-cli/generators": "^3.0.7",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.2",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "css-loader": "^7.1.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -40,6 +41,10 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "on-change": "^5.0.1",
+    "onchange": "^7.1.0",
+    "resolve-cwd": "^3.0.0",
+    "yup": "^1.4.0"
   }
 }
