--- a/package.json
+++ b/package.json
@@ -19,32 +19,37 @@
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.20.2",
-    "@webpack-cli/generators": "^3.0.7",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.2",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "css-loader": "^7.1.0",
+    "css-loader": "^6.7.3",
+    "debug": "^4.3.4",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-jest": "^27.2.1",
-    "html-webpack-plugin": "^5.6.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "jest-cli": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "prettier": "^3.2.5",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "workbox-webpack-plugin": "^7.0.0"
+    "postcss-loader": "^7.2.4",
+    "postcss-preset-env": "^7.8.3",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.76.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "i18next": "^23.11.2",
+    "lodash": "^4.17.21",
+    "npm-check-updates": "^16.6.2",
     "on-change": "^5.0.1",
-    "onchange": "^7.1.0",
-    "resolve-cwd": "^3.0.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "yup": "^1.4.0"
   }
 }
